# CLSplusplus

./: .cls-memory.md  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  Dockerfile  LAUNCH_CHECKLIST.md  LICENSE  Makefile  PLAN.md  README.md  VIDEO_SCRIPT.md  build-browsers.sh  build-safari.sh  build_dmg.sh  build_installer.sh  docker-compose.test.yml  docker-compose.yml  dump.rdb  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  run_tests.py  start.sh  start_server.sh  verify_inference_adversarial.py  verify_sessions.py  verify_temporal.py
.claude/: launch.json  settings.json
.claude/hooks/: cls-memory-recall.sh  cls-memory-store.sh
.claude/plans/: cat1_multihop_plan.md  launch-fixes.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  keepwarm.yml  prod-smoke.yml  publish-npm.yml  publish-pypi.yml
Benchmarking/.status/: locomo.json  longmemeval.json  progress.json
CLS_testing/: appTest.py  demo_innovations.py  demo_power.py  inte.py  integration.py  test_1000.py  test_1000_proper.py  test_500_quick.py  test_integration.py  test_longterm.py  test_model_switch.py  test_real_app.py  test_stress.py  test_trg_stress.py  test_visible.py
archive/website/: auth.js  benchmark.html  benchmark_v1_direct.html  billing-ui.js  chat-test.html  chat.html  cls-track.js  dashboard.html  demo.html  docs.html  footer.js  getting-started.html  index.html  install.html  integrate.html  landing-d.html  login.html  namespace.js  profile.html  signup.html  styles.css  submit.html  swagger-override.css  tests.html  theme-b.css  theme-c.css  toast.js  trace.html  usage.html  usage.js  variant-loader.js
benchmarking_LoCoMo/: run_clspp_benchmark.py
benchmarking_LoCoMo/outputs/: clspp_direct_v41_test1.json  clspp_direct_v41_test1_stats.json  clspp_llm_test1.json  clspp_llm_test1_stats.json  clspp_llm_v2_test1.json  clspp_llm_v2_test1_stats.json  clspp_llm_v3_test1.json  clspp_llm_v3_test1_stats.json  clspp_llm_v4_full.json  clspp_llm_v4_full_stats.json  clspp_llm_v4_test1.json  clspp_llm_v4_test1_stats.json  clspp_locomo10_results.json  clspp_locomo10_results_stats.json  clspp_trr_test1_stats.json  clspp_trr_test1_stats_stats.json  clspp_trr_v1_full.json  clspp_trr_v1_full_stats.json  clspp_v040_full.json  clspp_v040_full_stats.json  clspp_v040_test.json  clspp_v040_test2.json  clspp_v040_test2_stats.json  clspp_v040_test_stats.json  clspp_v050_full.json  clspp_v050_full_stats.json
docs/: API_BLUEPRINT.md  API_DOCUMENTATION.md  COMMERCIALIZATION_STRATEGY.md  DB_MIGRATIONS.md  DEMO_TESTING.md  DEPLOY_RENDER.md  EXTENSION_TEST_GUIDE.md  GITA_KAUR_AGENT.md  GITHUB_SETUP.md  HLD.md  HLD_USER_EMBEDDINGS.md  IMPLEMENTATION_PRIORITY.md  LLD.md  LOCAL_TESTING.md  MARKETPLACE_INTEGRATION.md  PITCH_ONE_LINER.md  PRODUCTIONIZATION_ROADMAP.md  RENDER_ENV_SETUP.md  RUNBOOKS.md  SAAS_MEMORY_AS_SERVICE.md
extension/: README-INSTALL.txt  analytics.js  background.js  capture.js  content_chatgpt.js  content_claude.js  content_common.js  content_gemini.js  intercept.js  manifest.json  package-lock.json  package.json  playwright.config.cjs  popup.html  popup.js  posthog.min.js  shared.css  sidepanel.html  sidepanel.js  themes.js
extension-edge/: content_claude.js  content_common.js  content_marker.js  manifest.json
extension-firefox/: background.js  content_common.js  intercept.js  manifest.json  popup.js
extension-safari/: background.js  content_chatgpt.js  content_common.js  content_marker.js  manifest.json  popup.js
infrastructure/: README.md
integrations/: __init__.py
plugin/: LICENSE  README.md
plugin/hooks/: hooks.json
prototype/: clspp-config.js  clspp_bundle_requirements.txt  daemon.py  daemon_requirements.txt  e2e-test.html  extension-e2e.html  index.html  install.html  memory-activate.html  memory.html  server.py  store-assets.html  submit.html
scripts/: cross_model_test.py  dev_server_waitlist.py  eval_locomo.py  init-pgvector.sql  load_test_demo.py  publish_ui_test_results.py  push-wiki.sh  run_local_demo.sh  run_ui_tests_prod.js  run_waitlist_tests.py  test-local.sh  test_demo_llm.py  verify_local.sh  wait-for-http.sh  waitlist_fake_harness.py
sdk-js/: README.md  package-lock.json  package.json  tsconfig.json
tests/: __init__.py  conftest.py  test_abuse_guard.py  test_admin.py  test_api.py  test_api_comprehensive.py  test_api_endpoints.py  test_api_usage_analytics.py  test_auth.py  test_billing_e2e.py  test_burst_hardening.py  test_client_sdk.py  test_config.py  test_cost_forecast.py  test_cross_llm_memory.py  test_demo_llm.py  test_embeddings.py  test_extension_integration.py  test_extension_ui.py  test_feedback_github.py  test_free_tier_lifecycle.py  test_full_api_coverage.py  test_funnel_metrics.py  test_geo_gating.py  test_health_metrics.py  test_idempotency.py  test_integration_service.py  test_mcp_connect.py  test_memory_cycle.py  test_memory_phase.py  test_memory_service.py  test_metering_v2_healthcheck.py  test_metering_v2_notifier.py  test_metering_v2_pricing.py  test_metering_v2_reconciler.py  test_metering_v2_schema.py  test_metering_v2_writer.py  test_middleware.py  test_models.py  test_overage_billing.py  (+24 more)
website/: VIDEO_SCRIPT.md  auth.js  benchmark.html  benchmark_v1_direct.html  chat-test.html  chat.html  chat.js  dashboard.html  dashboard.js  demo.html  demo.js  docs.html  extension-test.html  feedback-widget.js  getting-started.html  getting-started.js  index.html  install.html  integrate.html  integrations.html  integrations.js  landing-d.html  landing-e.html  login.html  memory.html  namespace.js  posthog.js  privacy.html  profile.html  profile.js  script.js  sidebar.js  signup.html  styles.css  submit.html  support.html  terms.html  tests.html  trace.html  usage.html  (+2 more)
wiki/: API-Reference.md  Architecture.md  Contributing.md  Deployment-Guide.md  Home.md  Integration-Examples.md  SaaS-and-Pricing.md
(+158 files in other folders)
