[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clsplusplus"
version = "4.0.1"
description = "Brain-inspired, model-agnostic persistent memory for LLMs. Learn, recall, forget — like a brain. Works with OpenAI, Claude, Gemini, Llama."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "AlphaForge AI Labs", email = "contact@alphaforge.ai"}]
maintainers = [{name = "Rajamohan Jabbala", email = "contact@alphaforge.ai"}]
keywords = [
    "llm", "memory", "ai", "persistent-memory", "model-agnostic",
    "brain", "openai", "anthropic", "claude", "gemini", "langchain",
    "continuous-learning", "semantic-search", "vector-database",
    "conversational-ai", "rag", "context-window",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# SDK-only dependencies — lightweight client (~5 MB install)
# pip install clsplusplus
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
# Full server dependencies — pip install clsplusplus[server]
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "structlog>=24.1.0",
    "apscheduler>=3.10.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "stripe>=7.0.0",
    "minio>=7.2.0",
    "pyarrow>=14.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.26.0",
]

[project.scripts]
cls = "clsplusplus.cli:main"

[project.urls]
Homepage = "https://www.clsplusplus.com"
Documentation = "https://www.clsplusplus.com/docs"
Repository = "https://github.com/rajamohan1950/CLSplusplus"
"Bug Tracker" = "https://github.com/rajamohan1950/CLSplusplus/issues"
Changelog = "https://github.com/rajamohan1950/CLSplusplus/releases"
"API Reference" = "https://www.clsplusplus.com/docs"
"Live Demo" = "https://www.clsplusplus.com/chat"
"npm Package" = "https://www.npmjs.com/package/clsplusplus"
"Source Code" = "https://github.com/rajamohan1950/CLSplusplus/tree/main/src"
Wiki = "https://github.com/rajamohan1950/CLSplusplus/wiki"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
